# TidyverseToPandas

./: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  tutorial.ipynb
src/tidyversetopandas/: __init__.py  tidyversetopandas.py
tests/: test_tidyversetopandas.py
