[tool.poetry]
name = "tidyversetopandas"
version = "0.1.0"
description = "Common tidyverse functions for pandas!"
authors = ["Thomas,Sophia,Lily,Nando"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
