[tool.poetry]
name = "tidyversetopandas"
version = "1.0.0"
description = "Common tidyverse functions for pandas!"
authors = ["Thomas, Sophia, Lily, Nando"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
pyarrow = "^15.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
python-semantic-release = "^8.7.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
] 
branch = "main"                             
changelog_file = "CHANGELOG.md"             
build_command = "pip install poetry && poetry build" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
